fix hero css layout shift

--- a/src/layouts/css/HeroSection.css
+++ b/src/layouts/css/HeroSection.css
@@ -1,6 +1,10 @@
+.webgl {
+    min-height: 430px;
+}
+
 .hero.container-fluid {
-    width: auto;
     --bs-gutter-x: 2.62rem;
+    width: auto;
 }
 
 .hero .col {
